# HFSSfileManager

./: .gitignore  LICENSE  README.md  README.zh-CN.md  index.html  package-lock.json  package.json  tailwind.config.ts  tsconfig.json
docs/: implementation-checklist.md
scripts/: build-release-no-bundle.ps1  run-hfss-manager.ps1
src/: App.tsx
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/icons/: icon.icns
src-tauri/migrations/: init.sql
src-tauri/src/: lib.rs  main.rs
src-tauri/src/commands/: backup.rs  mod.rs  projects.rs  repositories.rs  scan.rs  schedules.rs
src-tauri/src/core/: backup.rs  fs_utils.rs  mod.rs  scanner.rs  scheduler.rs
src-tauri/src/db/: mod.rs  schema.rs
src-tauri/src/models/: types.rs
src-tauri/src/tasks/: mod.rs  scheduler_worker.rs
src/components/: Layout.tsx
src/pages/: BackupsPage.tsx  ProjectsPage.tsx  RepositoriesPage.tsx  SchedulesPage.tsx
src/services/: pathPicker.ts  tauriApi.ts
src/store/: useAppStore.ts
src/styles/: globals.css
src/types/: index.ts
